--- a/index.html
+++ b/index.html
@@ -370,6 +370,1135 @@ summary {
 <div id="practice-results" class="section level1 tabset">
 <h1>Practice Results</h1>
 <div id="section" class="section level2">
+<h2>9/23/2020</h2>
+<div id="practice-back-of-the-park" class="section level3">
+<h3>Practice: Back of the Park</h3>
+<ul>
+<li>Men: 5x1mile, 3 min rest.</li>
+<li>Women: 3x1mile, 3 min rest.</li>
+<li>5:30pm, 75 Degrees.</li>
+</ul>
+<div id="results" class="section level4">
+<h4>Results</h4>
+<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
+<!-- Thu Sep 24 16:29:54 2020 -->
+<table border="1">
+<tr>
+<th>
+First
+</th>
+<th>
+Last
+</th>
+<th>
+1
+</th>
+<th>
+2
+</th>
+<th>
+3
+</th>
+<th>
+4
+</th>
+<th>
+5
+</th>
+<th>
+Avg
+</th>
+<th>
+Total
+</th>
+</tr>
+<tr>
+<td>
+Nick
+</td>
+<td>
+Clark
+</td>
+<td>
+05:22
+</td>
+<td>
+05:22
+</td>
+<td>
+05:22
+</td>
+<td>
+05:22
+</td>
+<td>
+05:25
+</td>
+<td>
+05:23
+</td>
+<td>
+26:53
+</td>
+</tr>
+<tr>
+<td>
+Jax
+</td>
+<td>
+Downs
+</td>
+<td>
+05:27
+</td>
+<td>
+05:29
+</td>
+<td>
+05:27
+</td>
+<td>
+05:21
+</td>
+<td>
+05:19
+</td>
+<td>
+05:25
+</td>
+<td>
+27:03
+</td>
+</tr>
+<tr>
+<td>
+Ben
+</td>
+<td>
+Kinsey
+</td>
+<td>
+05:27
+</td>
+<td>
+05:30
+</td>
+<td>
+05:28
+</td>
+<td>
+05:33
+</td>
+<td>
+05:31
+</td>
+<td>
+05:30
+</td>
+<td>
+27:29
+</td>
+</tr>
+<tr>
+<td>
+Wyatt
+</td>
+<td>
+Gatewood
+</td>
+<td>
+05:24
+</td>
+<td>
+05:27
+</td>
+<td>
+05:33
+</td>
+<td>
+05:38
+</td>
+<td>
+05:39
+</td>
+<td>
+05:32
+</td>
+<td>
+27:41
+</td>
+</tr>
+<tr>
+<td>
+Justin
+</td>
+<td>
+Tavner
+</td>
+<td>
+05:34
+</td>
+<td>
+05:37
+</td>
+<td>
+05:40
+</td>
+<td>
+05:39
+</td>
+<td>
+05:37
+</td>
+<td>
+05:37
+</td>
+<td>
+28:07
+</td>
+</tr>
+<tr>
+<td>
+Ike
+</td>
+<td>
+Madding
+</td>
+<td>
+05:38
+</td>
+<td>
+05:48
+</td>
+<td>
+05:51
+</td>
+<td>
+05:44
+</td>
+<td>
+05:55
+</td>
+<td>
+05:47
+</td>
+<td>
+28:56
+</td>
+</tr>
+<tr>
+<td>
+Harrison
+</td>
+<td>
+Booher
+</td>
+<td>
+05:38
+</td>
+<td>
+05:53
+</td>
+<td>
+06:00
+</td>
+<td>
+06:06
+</td>
+<td>
+06:06
+</td>
+<td>
+05:57
+</td>
+<td>
+29:43
+</td>
+</tr>
+<tr>
+<td>
+Sam
+</td>
+<td>
+Peoples
+</td>
+<td>
+06:02
+</td>
+<td>
+</td>
+<td>
+05:59
+</td>
+<td>
+</td>
+<td>
+06:04
+</td>
+<td>
+06:02
+</td>
+<td>
+18:05
+</td>
+</tr>
+<tr>
+<td>
+Noah
+</td>
+<td>
+Steeley
+</td>
+<td>
+06:02
+</td>
+<td>
+06:09
+</td>
+<td>
+06:00
+</td>
+<td>
+06:35
+</td>
+<td>
+06:25
+</td>
+<td>
+06:14
+</td>
+<td>
+31:11
+</td>
+</tr>
+<tr>
+<td>
+Wes
+</td>
+<td>
+Qualls
+</td>
+<td>
+06:11
+</td>
+<td>
+06:22
+</td>
+<td>
+06:27
+</td>
+<td>
+06:37
+</td>
+<td>
+06:37
+</td>
+<td>
+06:27
+</td>
+<td>
+32:14
+</td>
+</tr>
+<tr>
+<td>
+Hayden
+</td>
+<td>
+Sheroan
+</td>
+<td>
+06:42
+</td>
+<td>
+07:12
+</td>
+<td>
+07:22
+</td>
+<td>
+</td>
+<td>
+06:46
+</td>
+<td>
+07:00
+</td>
+<td>
+28:02
+</td>
+</tr>
+<tr>
+<td>
+Jodie
+</td>
+<td>
+Smith
+</td>
+<td>
+06:25
+</td>
+<td>
+06:37
+</td>
+<td>
+06:36
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+06:33
+</td>
+<td>
+19:38
+</td>
+</tr>
+<tr>
+<td>
+Rachel
+</td>
+<td>
+Puckett
+</td>
+<td>
+06:33
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+06:33
+</td>
+<td>
+06:33
+</td>
+</tr>
+<tr>
+<td>
+Manny
+</td>
+<td>
+Stovik
+</td>
+<td>
+06:50
+</td>
+<td>
+06:51
+</td>
+<td>
+06:50
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+06:50
+</td>
+<td>
+20:31
+</td>
+</tr>
+<tr>
+<td>
+Katie
+</td>
+<td>
+Milby
+</td>
+<td>
+06:50
+</td>
+<td>
+06:51
+</td>
+<td>
+06:59
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+06:53
+</td>
+<td>
+20:40
+</td>
+</tr>
+<tr>
+<td>
+Sarah
+</td>
+<td>
+Bailey
+</td>
+<td>
+06:56
+</td>
+<td>
+06:59
+</td>
+<td>
+07:00
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+06:58
+</td>
+<td>
+20:55
+</td>
+</tr>
+<tr>
+<td>
+Lauren
+</td>
+<td>
+Jackson
+</td>
+<td>
+07:20
+</td>
+<td>
+07:22
+</td>
+<td>
+07:23
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+07:22
+</td>
+<td>
+22:05
+</td>
+</tr>
+<tr>
+<td>
+Virginia
+</td>
+<td>
+white
+</td>
+<td>
+07:20
+</td>
+<td>
+07:22
+</td>
+<td>
+07:23
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+07:22
+</td>
+<td>
+22:05
+</td>
+</tr>
+<tr>
+<td>
+Riley
+</td>
+<td>
+Davis
+</td>
+<td>
+07:30
+</td>
+<td>
+07:24
+</td>
+<td>
+07:36
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+07:30
+</td>
+<td>
+22:30
+</td>
+</tr>
+<tr>
+<td>
+India
+</td>
+<td>
+Pugh
+</td>
+<td>
+08:08
+</td>
+<td>
+08:36
+</td>
+<td>
+08:30
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+08:25
+</td>
+<td>
+25:14
+</td>
+</tr>
+<tr>
+<td>
+Avery
+</td>
+<td>
+Renner
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Maddie
+</td>
+<td>
+Waltmon
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Ellie
+</td>
+<td>
+Stanko
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Kate
+</td>
+<td>
+Reese
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
+<div id="section-1" class="section level2">
+<h2>9/21/2020</h2>
+<div id="practice-park" class="section level3">
+<h3>Practice: Park</h3>
+<ul>
+<li>Men: 3 min at 5k pace, 2 min at 75%, 40 min total.</li>
+<li>Women: 2 min at 3k pace, 2 min at 75%, 40 min total.</li>
+<li>5:30pm, 72 Degrees.</li>
+</ul>
+<div id="results-1" class="section level4">
+<h4>Results</h4>
+<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
+<!-- Thu Sep 24 16:29:54 2020 -->
+<table border="1">
+<tr>
+<th>
+First
+</th>
+<th>
+Last
+</th>
+<th>
+Total Dist
+</th>
+<th>
+Time
+</th>
+<th>
+Pace
+</th>
+</tr>
+<tr>
+<td>
+Nick
+</td>
+<td>
+Clark
+</td>
+<td align="right">
+6.75
+</td>
+<td>
+40:00
+</td>
+<td>
+05:56
+</td>
+</tr>
+<tr>
+<td>
+Jax
+</td>
+<td>
+Downs
+</td>
+<td align="right">
+6.62
+</td>
+<td>
+40:00
+</td>
+<td>
+06:03
+</td>
+</tr>
+<tr>
+<td>
+Ben
+</td>
+<td>
+Kinsey
+</td>
+<td align="right">
+6.52
+</td>
+<td>
+40:00
+</td>
+<td>
+06:08
+</td>
+</tr>
+<tr>
+<td>
+Wyatt
+</td>
+<td>
+Gatewood
+</td>
+<td align="right">
+6.50
+</td>
+<td>
+40:00
+</td>
+<td>
+06:09
+</td>
+</tr>
+<tr>
+<td>
+Justin
+</td>
+<td>
+Tavner
+</td>
+<td align="right">
+6.50
+</td>
+<td>
+40:00
+</td>
+<td>
+06:09
+</td>
+</tr>
+<tr>
+<td>
+Ike
+</td>
+<td>
+Madding
+</td>
+<td align="right">
+6.30
+</td>
+<td>
+40:00
+</td>
+<td>
+06:21
+</td>
+</tr>
+<tr>
+<td>
+Harrison
+</td>
+<td>
+Booher
+</td>
+<td align="right">
+1.47
+</td>
+<td>
+10:00
+</td>
+<td>
+06:48
+</td>
+</tr>
+<tr>
+<td>
+Wes
+</td>
+<td>
+Qualls
+</td>
+<td align="right">
+5.82
+</td>
+<td>
+40:00
+</td>
+<td>
+06:52
+</td>
+</tr>
+<tr>
+<td>
+Noah
+</td>
+<td>
+Steeley
+</td>
+<td align="right">
+5.62
+</td>
+<td>
+40:00
+</td>
+<td>
+07:07
+</td>
+</tr>
+<tr>
+<td>
+Hayden
+</td>
+<td>
+Sheroan
+</td>
+<td align="right">
+3.00
+</td>
+<td>
+22:00
+</td>
+<td>
+07:20
+</td>
+</tr>
+<tr>
+<td>
+Avery
+</td>
+<td>
+Renner
+</td>
+<td align="right">
+5.54
+</td>
+<td>
+40:00
+</td>
+<td>
+07:13
+</td>
+</tr>
+<tr>
+<td>
+Jodie
+</td>
+<td>
+Smith
+</td>
+<td align="right">
+5.48
+</td>
+<td>
+40:00
+</td>
+<td>
+07:18
+</td>
+</tr>
+<tr>
+<td>
+Rachel
+</td>
+<td>
+Puckett
+</td>
+<td align="right">
+5.41
+</td>
+<td>
+40:00
+</td>
+<td>
+07:24
+</td>
+</tr>
+<tr>
+<td>
+Manny
+</td>
+<td>
+Stovik
+</td>
+<td align="right">
+5.26
+</td>
+<td>
+40:00
+</td>
+<td>
+07:36
+</td>
+</tr>
+<tr>
+<td>
+Katie
+</td>
+<td>
+Milby
+</td>
+<td align="right">
+5.26
+</td>
+<td>
+40:00
+</td>
+<td>
+07:36
+</td>
+</tr>
+<tr>
+<td>
+Lauren
+</td>
+<td>
+Jackson
+</td>
+<td align="right">
+5.17
+</td>
+<td>
+40:00
+</td>
+<td>
+07:44
+</td>
+</tr>
+<tr>
+<td>
+Kate
+</td>
+<td>
+Reese
+</td>
+<td align="right">
+5.17
+</td>
+<td>
+40:00
+</td>
+<td>
+07:44
+</td>
+</tr>
+<tr>
+<td>
+Sarah
+</td>
+<td>
+Bailey
+</td>
+<td align="right">
+5.13
+</td>
+<td>
+40:00
+</td>
+<td>
+07:48
+</td>
+</tr>
+<tr>
+<td>
+Riley
+</td>
+<td>
+Davis
+</td>
+<td align="right">
+4.74
+</td>
+<td>
+40:00
+</td>
+<td>
+08:26
+</td>
+</tr>
+<tr>
+<td>
+Ellie
+</td>
+<td>
+Stanko
+</td>
+<td align="right">
+4.74
+</td>
+<td>
+40:00
+</td>
+<td>
+08:26
+</td>
+</tr>
+<tr>
+<td>
+Virginia
+</td>
+<td>
+white
+</td>
+<td align="right">
+3.02
+</td>
+<td>
+25:41
+</td>
+<td>
+08:30
+</td>
+</tr>
+<tr>
+<td>
+India
+</td>
+<td>
+Pugh
+</td>
+<td align="right">
+4.23
+</td>
+<td>
+40:48
+</td>
+<td>
+09:39
+</td>
+</tr>
+<tr>
+<td>
+Sam
+</td>
+<td>
+Peoples
+</td>
+<td align="right">
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Maddie
+</td>
+<td>
+Waltmon
+</td>
+<td align="right">
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
+<div id="section-2" class="section level2">
 <h2>9/19/2020</h2>
 <div id="mock-race-2" class="section level3">
 <h3>Mock Race 2</h3>
@@ -390,10 +1519,10 @@ summary {
 <li><p>Men Avg Time Record Since I started coaching: 28:29</p></li>
 <li><p>Men Avg Time Record All Time: 27:21</p></li>
 </ul>
-<div id="results" class="section level4">
+<div id="results-2" class="section level4">
 <h4>Results</h4>
-<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 19 11:12:35 2020 -->
+<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
+<!-- Thu Sep 24 16:29:54 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -828,9 +1957,9 @@ Blake
 </div>
 </div>
 </div>
-<div id="section-1" class="section level2">
+<div id="section-3" class="section level2">
 <h2>9/15/2020</h2>
-<div id="practice-park" class="section level3">
+<div id="practice-park-1" class="section level3">
 <h3>Practice: Park</h3>
 <ul>
 <li>Men: 3x2mile, 4 min rest</li>
@@ -838,10 +1967,10 @@ Blake
 <li>5:30pm, 75 Degrees</li>
 <li>Each lap was 2.0167 miles</li>
 </ul>
-<div id="results-1" class="section level4">
+<div id="results-3" class="section level4">
 <h4>Results</h4>
-<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 19 11:12:35 2020 -->
+<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
+<!-- Thu Sep 24 16:29:54 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -1497,7 +2626,7 @@ Stanko
 </div>
 </div>
 </div>
-<div id="section-2" class="section level2">
+<div id="section-4" class="section level2">
 <h2>9/9/2020</h2>
 <div id="practice-east-campus" class="section level3">
 <h3>Practice: East Campus</h3>
@@ -1507,10 +2636,10 @@ Stanko
 <li>6:30am, 66 Degrees</li>
 <li>Each Interval was 1020m, which is about 0.63 miles. This column is a slightly adjusted average to account for this.</li>
 </ul>
-<div id="results-2" class="section level4">
+<div id="results-4" class="section level4">
 <h4>Results</h4>
-<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 19 11:12:35 2020 -->
+<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
+<!-- Thu Sep 24 16:29:54 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -2479,7 +3608,7 @@ Pugh
 </div>
 </div>
 </div>
-<div id="section-3" class="section level2">
+<div id="section-5" class="section level2">
 <h2>9/7/2020</h2>
 <div id="practice-scott-co.-park" class="section level3">
 <h3>Practice: Scott Co. Park</h3>
@@ -2489,10 +3618,10 @@ Pugh
 <li>88 Degrees</li>
 <li>“Last Year” is the average for last years workout. Men did 3 sets, women did 2 sets.</li>
 </ul>
-<div id="results-3" class="section level4">
+<div id="results-5" class="section level4">
 <h4>Results</h4>
-<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 19 11:12:35 2020 -->
+<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
+<!-- Thu Sep 24 16:29:54 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -3046,7 +4175,7 @@ Davis
 </div>
 </div>
 </div>
-<div id="section-4" class="section level2">
+<div id="section-6" class="section level2">
 <h2>9/5/2020</h2>
 <div id="mock-race-1" class="section level3">
 <h3>Mock Race 1</h3>
@@ -3067,10 +4196,10 @@ Davis
 <li><p>Men Avg Time Record Since I started coaching: 28:29</p></li>
 <li><p>Men Avg Time Record All Time: 27:21</p></li>
 </ul>
-<div id="results-4" class="section level4">
+<div id="results-6" class="section level4">
 <h4>Results</h4>
-<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 19 11:12:35 2020 -->
+<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
+<!-- Thu Sep 24 16:29:54 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -3409,7 +4538,7 @@ Wyatt
 </div>
 </div>
 </div>
-<div id="section-5" class="section level2">
+<div id="section-7" class="section level2">
 <h2>9/2/2020</h2>
 <div id="workout" class="section level3">
 <h3>Workout</h3>
@@ -3420,8 +4549,8 @@ Wyatt
 <p>Each lap was about 0.52 miles. I created two tables, one is the raw times, the 2nd is adjusted times.</p>
 <div id="unadjusted-results" class="section level4">
 <h4>Unadjusted Results</h4>
-<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 19 11:12:35 2020 -->
+<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
+<!-- Thu Sep 24 16:29:54 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -4088,8 +5217,8 @@ White
 </div>
 <div id="adjusted-results" class="section level4">
 <h4>Adjusted Results</h4>
-<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 19 11:12:36 2020 -->
+<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
+<!-- Thu Sep 24 16:29:54 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -4756,7 +5885,7 @@ White
 </div>
 </div>
 </div>
-<div id="section-6" class="section level2">
+<div id="section-8" class="section level2">
 <h2>8/31/2020</h2>
 <div id="workout-1" class="section level3">
 <h3>Workout</h3>
@@ -4767,8 +5896,8 @@ White
 <p>Two or Three Laps at the Park. Each lap was approx 2.0166667 miles.</p>
 <div id="men-and-women" class="section level4">
 <h4>Men and Women</h4>
-<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 19 11:12:36 2020 -->
+<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
+<!-- Thu Sep 24 16:29:54 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -5461,7 +6590,7 @@ Pugh
 </div>
 </div>
 </div>
-<div id="section-7" class="section level2">
+<div id="section-9" class="section level2">
 <h2>8/26/2020</h2>
 <div id="workout-2" class="section level3">
 <h3>Workout</h3>
@@ -5473,8 +6602,8 @@ Pugh
 <p>Weather: 77 degrees</p>
 <div id="men" class="section level4">
 <h4>Men</h4>
-<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 19 11:12:36 2020 -->
+<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
+<!-- Thu Sep 24 16:29:54 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -5927,8 +7056,8 @@ Sheroan
 </div>
 <div id="women" class="section level4">
 <h4>Women</h4>
-<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 19 11:12:36 2020 -->
+<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
+<!-- Thu Sep 24 16:29:54 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -6484,7 +7613,7 @@ Stanko
 </div>
 </div>
 </div>
-<div id="section-8" class="section level2">
+<div id="section-10" class="section level2">
 <h2>8/24/2020</h2>
 <div id="workout-3" class="section level3">
 <h3>Workout</h3>
@@ -6496,8 +7625,8 @@ Stanko
 <p>Weather: 84 degrees</p>
 <div id="men-1" class="section level4">
 <h4>Men</h4>
-<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 19 11:12:36 2020 -->
+<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
+<!-- Thu Sep 24 16:29:55 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -6822,8 +7951,8 @@ Sheroan
 </div>
 <div id="women-1" class="section level4">
 <h4>Women</h4>
-<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 19 11:12:36 2020 -->
+<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
+<!-- Thu Sep 24 16:29:55 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -7105,7 +8234,7 @@ Pugh
 </div>
 </div>
 </div>
-<div id="section-9" class="section level2">
+<div id="section-11" class="section level2">
 <h2>8/19/2020</h2>
 <div id="fartlek-run" class="section level3">
 <h3>Fartlek Run</h3>
@@ -7118,7 +8247,7 @@ Pugh
 </ul>
 </div>
 </div>
-<div id="section-10" class="section level2">
+<div id="section-12" class="section level2">
 <h2>8/17/2020</h2>
 <div id="threshold-run" class="section level3">
 <h3>Threshold Run</h3>
@@ -7127,8 +8256,8 @@ Pugh
 </ul>
 <div id="men-5.04-miles" class="section level4">
 <h4>Men: 5.04 Miles</h4>
-<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 19 11:12:36 2020 -->
+<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
+<!-- Thu Sep 24 16:29:55 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -7677,8 +8806,8 @@ Steeley
 </div>
 <div id="women-3.03-miles" class="section level4">
 <h4>Women: 3.03 Miles</h4>
-<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 19 11:12:36 2020 -->
+<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
+<!-- Thu Sep 24 16:29:55 2020 -->
 <table border="1">
 <tr>
 <th>
