--- a/index.html
+++ b/index.html
@@ -369,6 +369,441 @@ summary {
 
 <div id="practice-results" class="section level1 tabset">
 <h1>Practice Results</h1>
+<div id="paces-for-louisville" class="section level2">
+<h2>Paces for Louisville</h2>
+<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
+<!-- Fri Oct 02 21:00:53 2020 -->
+<table border="1">
+<tr>
+<th>
+Name
+</th>
+<th>
+1 Mile
+</th>
+<th>
+2 Mile
+</th>
+<th>
+3 Mile
+</th>
+<th>
+4 Mile
+</th>
+<th>
+Finish
+</th>
+</tr>
+<tr>
+<td>
+Nick
+</td>
+<td>
+05:22
+</td>
+<td>
+10:44
+</td>
+<td>
+16:06
+</td>
+<td>
+21:28
+</td>
+<td>
+26:40
+</td>
+</tr>
+<tr>
+<td>
+Jax
+</td>
+<td>
+05:22
+</td>
+<td>
+10:44
+</td>
+<td>
+16:06
+</td>
+<td>
+21:28
+</td>
+<td>
+26:40
+</td>
+</tr>
+<tr>
+<td>
+Wyatt
+</td>
+<td>
+05:22
+</td>
+<td>
+10:44
+</td>
+<td>
+16:06
+</td>
+<td>
+21:28
+</td>
+<td>
+26:40
+</td>
+</tr>
+<tr>
+<td>
+Ben
+</td>
+<td>
+05:25
+</td>
+<td>
+10:50
+</td>
+<td>
+16:15
+</td>
+<td>
+21:40
+</td>
+<td>
+26:55
+</td>
+</tr>
+<tr>
+<td>
+Harrison
+</td>
+<td>
+05:30
+</td>
+<td>
+11:00
+</td>
+<td>
+16:30
+</td>
+<td>
+22:00
+</td>
+<td>
+27:20
+</td>
+</tr>
+<tr>
+<td>
+Justin
+</td>
+<td>
+05:30
+</td>
+<td>
+11:00
+</td>
+<td>
+16:30
+</td>
+<td>
+22:00
+</td>
+<td>
+27:20
+</td>
+</tr>
+<tr>
+<td>
+Brad
+</td>
+<td>
+05:35
+</td>
+<td>
+11:10
+</td>
+<td>
+16:45
+</td>
+<td>
+22:20
+</td>
+<td>
+27:45
+</td>
+</tr>
+<tr>
+<td>
+Ike
+</td>
+<td>
+05:35
+</td>
+<td>
+11:10
+</td>
+<td>
+16:45
+</td>
+<td>
+22:20
+</td>
+<td>
+27:45
+</td>
+</tr>
+<tr>
+<td>
+Sam
+</td>
+<td>
+06:02
+</td>
+<td>
+12:04
+</td>
+<td>
+18:06
+</td>
+<td>
+24:08
+</td>
+<td>
+29:59
+</td>
+</tr>
+<tr>
+<td>
+Wes
+</td>
+<td>
+06:10
+</td>
+<td>
+12:20
+</td>
+<td>
+18:30
+</td>
+<td>
+24:40
+</td>
+<td>
+30:39
+</td>
+</tr>
+<tr>
+<td>
+</td>
+<td>
+1 Mile
+</td>
+<td>
+2 Mile
+</td>
+<td>
+3 Mile
+</td>
+<td>
+Finish
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Jodie
+</td>
+<td>
+06:15
+</td>
+<td>
+12:30
+</td>
+<td>
+18:45
+</td>
+<td>
+19:26
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Rachel
+</td>
+<td>
+06:22
+</td>
+<td>
+12:44
+</td>
+<td>
+19:06
+</td>
+<td>
+19:48
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Avery
+</td>
+<td>
+06:22
+</td>
+<td>
+12:44
+</td>
+<td>
+19:06
+</td>
+<td>
+19:48
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Manny
+</td>
+<td>
+06:40
+</td>
+<td>
+13:20
+</td>
+<td>
+20:00
+</td>
+<td>
+20:44
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Sarah
+</td>
+<td>
+06:40
+</td>
+<td>
+13:20
+</td>
+<td>
+20:00
+</td>
+<td>
+20:44
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Maddie
+</td>
+<td>
+06:40
+</td>
+<td>
+13:20
+</td>
+<td>
+20:00
+</td>
+<td>
+20:44
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Katie
+</td>
+<td>
+06:40
+</td>
+<td>
+13:20
+</td>
+<td>
+20:00
+</td>
+<td>
+20:44
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Virginia
+</td>
+<td>
+07:00
+</td>
+<td>
+14:00
+</td>
+<td>
+21:00
+</td>
+<td>
+21:46
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Lan
+</td>
+<td>
+07:00
+</td>
+<td>
+14:00
+</td>
+<td>
+21:00
+</td>
+<td>
+21:46
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Ellie
+</td>
+<td>
+07:10
+</td>
+<td>
+14:20
+</td>
+<td>
+21:30
+</td>
+<td>
+22:17
+</td>
+<td>
+</td>
+</tr>
+</table>
+</div>
 <div id="section" class="section level2">
 <h2>9/23/2020</h2>
 <div id="practice-back-of-the-park" class="section level3">
@@ -380,8 +815,8 @@ summary {
 </ul>
 <div id="results" class="section level4">
 <h4>Results</h4>
-<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
-<!-- Thu Sep 24 16:29:54 2020 -->
+<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
+<!-- Fri Oct 02 21:00:53 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -1072,8 +1507,8 @@ Reese
 </ul>
 <div id="results-1" class="section level4">
 <h4>Results</h4>
-<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
-<!-- Thu Sep 24 16:29:54 2020 -->
+<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
+<!-- Fri Oct 02 21:00:53 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -1521,8 +1956,8 @@ Waltmon
 </ul>
 <div id="results-2" class="section level4">
 <h4>Results</h4>
-<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
-<!-- Thu Sep 24 16:29:54 2020 -->
+<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
+<!-- Fri Oct 02 21:00:53 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -1969,8 +2404,8 @@ Blake
 </ul>
 <div id="results-3" class="section level4">
 <h4>Results</h4>
-<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
-<!-- Thu Sep 24 16:29:54 2020 -->
+<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
+<!-- Fri Oct 02 21:00:53 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -2638,8 +3073,8 @@ Stanko
 </ul>
 <div id="results-4" class="section level4">
 <h4>Results</h4>
-<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
-<!-- Thu Sep 24 16:29:54 2020 -->
+<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
+<!-- Fri Oct 02 21:00:53 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -3620,8 +4055,8 @@ Pugh
 </ul>
 <div id="results-5" class="section level4">
 <h4>Results</h4>
-<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
-<!-- Thu Sep 24 16:29:54 2020 -->
+<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
+<!-- Fri Oct 02 21:00:53 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -4198,8 +4633,8 @@ Davis
 </ul>
 <div id="results-6" class="section level4">
 <h4>Results</h4>
-<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
-<!-- Thu Sep 24 16:29:54 2020 -->
+<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
+<!-- Fri Oct 02 21:00:53 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -4549,8 +4984,8 @@ Wyatt
 <p>Each lap was about 0.52 miles. I created two tables, one is the raw times, the 2nd is adjusted times.</p>
 <div id="unadjusted-results" class="section level4">
 <h4>Unadjusted Results</h4>
-<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
-<!-- Thu Sep 24 16:29:54 2020 -->
+<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
+<!-- Fri Oct 02 21:00:53 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -5217,8 +5652,8 @@ White
 </div>
 <div id="adjusted-results" class="section level4">
 <h4>Adjusted Results</h4>
-<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
-<!-- Thu Sep 24 16:29:54 2020 -->
+<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
+<!-- Fri Oct 02 21:00:53 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -5896,8 +6331,8 @@ White
 <p>Two or Three Laps at the Park. Each lap was approx 2.0166667 miles.</p>
 <div id="men-and-women" class="section level4">
 <h4>Men and Women</h4>
-<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
-<!-- Thu Sep 24 16:29:54 2020 -->
+<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
+<!-- Fri Oct 02 21:00:53 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -6602,8 +7037,8 @@ Pugh
 <p>Weather: 77 degrees</p>
 <div id="men" class="section level4">
 <h4>Men</h4>
-<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
-<!-- Thu Sep 24 16:29:54 2020 -->
+<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
+<!-- Fri Oct 02 21:00:53 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -7056,8 +7491,8 @@ Sheroan
 </div>
 <div id="women" class="section level4">
 <h4>Women</h4>
-<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
-<!-- Thu Sep 24 16:29:54 2020 -->
+<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
+<!-- Fri Oct 02 21:00:54 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -7625,8 +8060,8 @@ Stanko
 <p>Weather: 84 degrees</p>
 <div id="men-1" class="section level4">
 <h4>Men</h4>
-<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
-<!-- Thu Sep 24 16:29:55 2020 -->
+<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
+<!-- Fri Oct 02 21:00:54 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -7951,8 +8386,8 @@ Sheroan
 </div>
 <div id="women-1" class="section level4">
 <h4>Women</h4>
-<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
-<!-- Thu Sep 24 16:29:55 2020 -->
+<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
+<!-- Fri Oct 02 21:00:54 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -8256,8 +8691,8 @@ Pugh
 </ul>
 <div id="men-5.04-miles" class="section level4">
 <h4>Men: 5.04 Miles</h4>
-<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
-<!-- Thu Sep 24 16:29:55 2020 -->
+<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
+<!-- Fri Oct 02 21:00:54 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -8806,8 +9241,8 @@ Steeley
 </div>
 <div id="women-3.03-miles" class="section level4">
 <h4>Women: 3.03 Miles</h4>
-<!-- html table generated in R 3.6.2 by xtable 1.8-4 package -->
-<!-- Thu Sep 24 16:29:55 2020 -->
+<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
+<!-- Fri Oct 02 21:00:54 2020 -->
 <table border="1">
 <tr>
 <th>
